<resources>

    <array name="dot_colors_pink">
        <item>#962f98</item>
        <item>#962f98</item>
        <item>#962f98</item>
    </array>
    <string name="app_name">CoinAnalysis</string>
    <string name="about">About</string>
    <string name="version">Version 1.1</string>
    <string name="copyright">© 2018 BangBit Technologies Pvt. Ltd.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="myInvestment">My Investments</string>
    <string name="exchange">Crypto ⇄ Fiat</string>
    <string name="action_settings">Settings</string>
    <string name="_0">0%</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="prediction">Analyze</string>
    <string name="day7">7 Days</string>
    <string name="hrs24">24 Hrs</string>
    <string name="hrs1">1 Hr</string>
    <string name="day7main">7 Days</string>
    <string name="hrs24main">24 Hrs</string>
    <string name="hrs1main">1 Hr</string>
    <string name="market_cap">Market Cap </string>
    <string name="supply">Supply :</string>
    <string name="help_message">To filter coins by the average percentage changes recorded in the past 7 days and 24 hours and 1 hour collectively.</string>
    <string name="change_percentage_filter">Percentage Change</string> <!-- By Time-->
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="analyze">Analyze</string>
    <string name="check_internet_connection">Check your internet connection.</string>
    <string name="use_of_percentage_filter">Use Of Percentage Change Filter</string>
    <string name="Search">Search</string>
    <string name="Sorting">Sorting</string>
    <string name="Price">Price</string>
    <string name="Volume">Volume 24Hrs</string>
    <string name="MarketCap">Market Cap</string>
    <string name="Supply">Supply</string>
    <string name="Rank">Rank</string>
    <string name="Name">Name</string>
    <string name="Symbol">Name</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="default_currency_conversion">My Fiat Currency</string>
    <string name="setting">Settings</string>
    <string name="loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imp_note_desc"><![CDATA[Our cryptocurrency predictions are made by Machine Learning & Ai, and shouldn\'t been used for financial decisions.]]></string>
    <string name="important_note_for_user">Important Note for User</string>
    <string name="eliott_wave_based_prediction">Eliott Wave based Prediction</string>
    <string name="cryptocurrency_converter">Cryptocurrency Converter</string>
    <string name="change_prediction_filter">Change Prediction Filter</string>
    <string name="welcome_to_coinanalysis">Welcome to CoinAnalysis</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="price_colon">Price :</string>
    <string name="more">More</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="price_usd">Price :</string>
    <string name="price">Price</string>

    <string name="vol_24hrs">Vol 24Hrs</string>
    <string name="_7_day">7 Days</string>
    <string name="_24_hours">24 Hours</string>
    <string name="_1_hour">1 Hour</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="_7_day_per">% 7 Days</string>
    <string name="_24_hours_per">% 24 Hours</string>
    <string name="_1_hour_per">% 1 Hour</string>
    <string name="no_investment_available">No investments added.</string>
    <string name="no_data_available">No data available.</string>
    <string name="na">NA</string>
    <string name="percentage_change_filter">Percentage Change Filter</string>
    <string name="my_investments">My Investments</string>
    <string name="set_default_currency">Default Fiat Currency</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions :]]></string>
    <string name="terms_and_conditions_text">By downloading or using the app, these terms will automatically apply to you. You should make sure therefore that you read them carefully before using the app. We are offering you this app to use for your own personal use without cost, but you should be aware that you’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way.\n\nNo Investment Advice:\n\nThe information provided on this app does not constitute as investment advice, financial advice, trading advice, or any other sort of advice, and you should not treat any of the app content as such. We do not recommend that any cryptocurrency should be bought, sold, or held by you. Nothing on this app should be taken as an offer to buy, sell or hold a cryptocurrency. Do conduct your own due diligence and consult your financial advisory before making any investment decision.\n\nAccuracy of Information:\n\nWe will strive to ensure accuracy of information listed here although it will not hold any responsibility for any missing or wrong information. You understand that you are using any and all information available here AT YOUR OWN RISK.\n\nPrice Risk:\n\nThe price of Bitcoin and other cryptocurrencies are very highly volatile. It is common for prices to increase or decrease by over 100% in a single day. Although this could mean potential huge profits, this also could mean potential huge losses. DO NOT INVEST ALL YOUR MONEY IN CRYPTOCURRENCIES. Only invest money which you are willing to lose. Cryptocurrency trading may not be suitable for all users of this app. Anyone looking to invest in cryptocurrencies should consult a fully qualified independent professional financial adviser.</string>
    <string name="chatbot">ChatBot</string>


</resources>

