<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/rank"
        android:title="@string/Rank" />

    <item android:id="@+id/price"
        android:title="@string/Price" />

    <item android:id="@+id/volume"
        android:title="@string/Volume"
        />

    <item android:id="@+id/marketcap"
        android:title="@string/MarketCap"
     />

    <item android:id="@+id/day7"
        android:title="@string/_7_day_per"
        />

    <item android:id="@+id/hrs24"
        android:title="@string/_24_hours_per"
        />

    <item android:id="@+id/hr1"
        android:title="@string/_1_hour_per"
        />

    <item android:id="@+id/symbol"
        android:title="@string/Symbol"
        />

</menu>