<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp8"
    app:cardElevation="@dimen/dp3">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="@dimen/dp16">

        <ImageView
            android:id="@+id/coin_icon"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_marginRight="@dimen/dp16"
            android:scaleType="fitXY"
            android:src="@drawable/default_coin" />

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@id/coin_icon">

            <TextView
                android:id="@+id/textViewCoinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/textViewRank"
                android:layout_marginTop="-3dp"
                android:layout_marginRight="@dimen/dp16"
                android:fontFamily="@font/rokkitt_bold"
                android:singleLine="true"
                android:text="BTC"
                android:textColor="@color/coin_header"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/textViewRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-3dp"
                android:layout_toLeftOf="@id/imageViewFavorit"
                android:fontFamily="@font/rokkitt_bold"
                android:singleLine="true"
                android:text="Rank: "
                android:textColor="@color/coin_header"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/imageViewFavorit"
                android:layout_width="@dimen/dp24"
                android:layout_height="@dimen/dp24"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="-3dp"
                android:src="@drawable/heart_unfilled" />

            <RelativeLayout
                android:id="@+id/detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCoinName">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_toLeftOf="@id/chart"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rokkitt_bold"
                        android:singleLine="true"
                        android:text="@string/Price"
                        android:textColor="@color/coin_header"
                        android:textColorLink="@color/coin_header"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/price"
                        android:fontFamily="@font/rokkitt_regular"
                        android:singleLine="true"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/day7"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/price"
                        android:fontFamily="@font/rokkitt_bold"
                        android:singleLine="true"
                        android:text="@string/day7"
                        android:textColor="@color/coin_header"
                        android:textColorLink="@color/coin_header"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/day7_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/price"
                        android:layout_toRightOf="@id/day7"
                        android:fontFamily="@font/rokkitt_regular"
                        android:singleLine="true"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/hr24"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/day7"
                        android:fontFamily="@font/rokkitt_bold"
                        android:singleLine="true"
                        android:text="@string/hrs24"
                        android:textColor="@color/coin_header"
                        android:textColorLink="@color/coin_header"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/hr24_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/day7"
                        android:layout_toRightOf="@id/hr24"
                        android:fontFamily="@font/rokkitt_regular"
                        android:singleLine="true"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/hr1"
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/hr24"
                        android:fontFamily="@font/rokkitt_bold"
                        android:singleLine="true"
                        android:text="@string/hrs1"
                        android:textColor="@color/coin_header"
                        android:textColorLink="@color/coin_header"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/hr1_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/hr24"
                        android:layout_toRightOf="@id/hr1"
                        android:fontFamily="@font/rokkitt_regular"
                        android:singleLine="true"
                        android:textSize="@dimen/sp14" />

                </RelativeLayout>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp59"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp5"
                    android:padding="@dimen/dp0"
                    android:visibility="invisible"/>

                <ImageView
                    android:id="@+id/no_chart_ImageView"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp59"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp5"
                    android:padding="@dimen/dp0"
                    android:background="@drawable/no_chart"/>

                <LinearLayout
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/chart"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewStartDate"
                        style="@style/bold_10sp_pink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="March" />

                    <TextView
                        android:id="@+id/textViewEndDate"
                        style="@style/bold_10sp_pink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="April" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container"
            android:layout_toRightOf="@id/coin_icon"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/mcap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rokkitt_bold"
                    android:singleLine="true"
                    android:text="@string/market_cap"
                    android:textColor="@color/coin_header"
                    android:textSize="@dimen/sp14" />

                <TextView
                    android:id="@+id/mcap_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_toEndOf="@id/mcap"
                    android:fontFamily="@font/rokkitt_regular"
                    android:singleLine="true"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/vol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/vol_value"
                    android:fontFamily="@font/rokkitt_bold"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/vol_24hrs"
                    android:textColor="@color/coin_header"
                    android:textSize="@dimen/sp14" />

                <TextView
                    android:id="@+id/vol_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/rokkitt_regular"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>



