<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp4"
    android:background="@color/white"
    android:elevation="@dimen/dp4"
    android:padding="@dimen/dp16"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/rokkitt_bold"
                android:text="Percentage Change :"
                android:textColor="@color/coin_header"
                android:textSize="@dimen/sp16" />

            <Switch
                android:id="@+id/togger_filter_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/dp4"
            android:weightSum="10">

            <TextView
                android:layout_width="@dimen/dp70"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/rokkitt_bold"
                android:text="@string/day7"
                android:textSize="@dimen/sp14" />

            <SeekBar
                android:id="@+id/day7_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp70"
                android:layout_marginStart="@dimen/dp70"
                android:max="150"
                android:progress="50"
                android:thumb="@drawable/thumb"
                android:progressBackgroundTint="@android:color/darker_gray"
                android:progressTint="@color/colorAccent"/>

            <TextView
                android:id="@+id/textView7day"
                android:layout_width="@dimen/dp70"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_white_border_ripple"
                android:clickable="true"
                android:fontFamily="@font/rokkitt_regular"
                android:padding="@dimen/dp6"
                android:text="> 0%"
                android:textSize="@dimen/sp14" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/dp4">

            <TextView
                android:layout_width="@dimen/dp70"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/rokkitt_bold"
                android:text="@string/hrs24"
                android:textSize="@dimen/sp14" />

            <SeekBar
                android:id="@+id/hours_24_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp70"
                android:layout_marginStart="@dimen/dp70"
                android:progress="50"
                android:max="150"
                android:thumb="@drawable/thumb"
                android:progressBackgroundTint="@android:color/darker_gray"
                android:progressTint="@color/colorAccent"/>

            <TextView
                android:id="@+id/textView24Hours"
                android:layout_width="@dimen/dp70"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_white_border_ripple"
                android:clickable="true"
                android:fontFamily="@font/rokkitt_regular"
                android:padding="@dimen/dp6"
                android:text="> 0%"
                android:textSize="@dimen/sp14" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/dp4"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/dp70"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/rokkitt_bold"
                android:text="@string/hrs1"
                android:textSize="@dimen/sp14" />

            <SeekBar
                android:id="@+id/hour_1_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp70"
                android:layout_marginStart="@dimen/dp70"
                android:progress="50"
                android:max="150"
                android:thumb="@drawable/thumb"
                android:progressBackgroundTint="@android:color/darker_gray"
                android:progressTint="@color/colorAccent"/>

            <TextView
                android:id="@+id/textView1Hour"
                android:layout_width="@dimen/dp70"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_white_border_ripple"
                android:clickable="true"
                android:fontFamily="@font/rokkitt_regular"
                android:padding="@dimen/dp6"
                android:text="> 0%"
                android:textSize="@dimen/sp14" />


        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>